# mcomix

./: .gitignore  ChangeLog  ChangeLog.md  MANIFEST.in  README  README.md  README.rst  mcomixstarter.py  pyproject.toml  setup.cfg  setup.py
artwork/: Makefile  README.md
mcomix/: __main__.py  archive_extractor.py  archive_tools.py  bookmark_backend.py  bookmark_dialog.py  callback.py  constants.py  edit_dialog.py  enhance_backend.py  enhance_dialog.py  event.py  file_chooser_base_dialog.py  i18n.py  icons.py  image_handler.py  image_tools.py  keybindings.py  labels.py  last_read_page.py  layout.py  lens.py  log.py  main.py  openwith.py  portability.py  preferences.py  preferences_dialog.py  properties_dialog.py  run.py  slideshow.py  status.py  strings.py  thumbnail_tools.py  tools.py  transform.py  ui.py  zoom.py
mcomix/archive/: archive_base.py  mobi.py  pdf_external.py  pdf_multi.py  sevenzip_external.py
mcomix/archive/native_pdf/: child.py  manager.py  parent.py
mcomix/mcomix/: event.py  keybindings_map.py  main.py  preferences.py  ui.py
mcomix/messages/: mcomix.pot
mcomix/messages/ca/LC_MESSAGES/: mcomix.po
mcomix/messages/cs/LC_MESSAGES/: mcomix.po
mcomix/messages/de/LC_MESSAGES/: mcomix.mo  mcomix.po
mcomix/messages/el/LC_MESSAGES/: mcomix.po
mcomix/messages/es/LC_MESSAGES/: mcomix.po
mcomix/messages/fa/LC_MESSAGES/: mcomix.po
mcomix/messages/fr/LC_MESSAGES/: mcomix.po
mcomix/messages/gl/LC_MESSAGES/: mcomix.po
mcomix/messages/he/LC_MESSAGES/: mcomix.po
mcomix/messages/hr/LC_MESSAGES/: mcomix.po
mcomix/messages/hu/LC_MESSAGES/: mcomix.po
mcomix/messages/id/LC_MESSAGES/: mcomix.po
mcomix/messages/it/LC_MESSAGES/: mcomix.po
share/metainfo/: mcomix.appdata.xml  mcomix.metainfo.xml
test/: test_tools.py
wiki/: Readme.md  pyproject.toml
wiki/content/: Documentation.md  External_Commands.md  Home.md  Installation.md  Keybindings.md  Maintainance.md  Maintenance.md  Preferences.md
wiki/src/sfwikisync/: __main__.py  bearerauth.py  wikiclient.py  wikipage.py
win32/: build_msi.py  build_pyinstaller.py  mcomix.nuspec  mcomix.spec  mcomix.wxs  version_file.template
win32/msi/: gpl-2.0.rtf  mcomix.wxs
win32/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
(+11 files in other folders)
