[project]
name = "sourceforge-wikisync"

version = "1.0.0"

description = "Synchronize a folder of Markdown documents with an Allura wiki hosted by SourceForge"

requires-python = ">=3.7"

classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Text Processing :: Markup :: Markdown",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

dependencies = [
  "requests"
]

[project.optional-dependencies]
dev = [
  "python-lsp-server[flake8]",
  "pylsp-mypy",
  "pyls-isort",
  "python-lsp-black",
  "types-requests"
]


[project.scripts]
sfwikisync = "sfwikisync.__main__:main"
